# coincoin

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: docker.yaml
api/: api.py  urls.py
coincoin/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
coincoin/management/commands/: pullposts.py
coincoin/migrations/: 0001_initial.py  0002_add_linuxfr.py  0003_rename_url_board_backend_url.py
coincoin/static/coincoin/js/: main.js
coincoin/templates/coincoin/: index.html
proj/: celery.py  settings.py  urls.py
ui/: package.json  vite.config.js
ui/src/: APIClient.ts  main.ts
ui/src/widgets/: BoardBookletLayout.ts  BoardPageLayout.ts  PostLayout.ts
