[project]
name = "coincoin"
version = "0.0.1"
description = "My coincoin"
authors = [
    { name = "Jonathan Tremesaygues", email = "jonathan.tremesaygues@slaanesh.org" },
]


[tool.black]
profile = "black"
line-length = 79


[tool.isort]
profile = "black"


[tool.setuptools]
packages = ["openrail"]
